--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -17,3 +17,73 @@ body
   font-family: "Poppins", Helvetica, sans-serif;
   font-weight: 800;
 }
+
+button 
+{
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+button:hover 
+{
+  opacity: 0.8;
+  transform: scale(1.05);
+}
+
+/* Login form */
+
+.LoginCard
+{
+  width: 70%;
+  text-align: center;
+  margin-top: 2.5%;
+}
+
+#Logo
+{
+  border-radius: 50%;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+#Logo:hover
+{
+  transform: scale(1.1);
+  opacity: 90%;
+}
+
+input[type = text], input[type = password]
+{
+  width: 80%;
+  margin-top: 5%;
+  padding: 12px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+#LoginButton
+{
+  background-color: #4CAF50;
+  color: white;
+  width: 80%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding: 14px 20px;
+}
+
+@media screen and (max-width: 800px) 
+{
+  input[type = text], input[type = password]
+  {
+    margin-top: 10%;
+  }
+
+  #LoginButton
+  {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+}
