--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -70,6 +70,17 @@ button:hover
   }
 } 
 
+img
+{
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+img:hover
+{
+  transform: scale(1.1);
+}
+
 /* Login form */
 
 .LoginCard
@@ -83,13 +94,10 @@ button:hover
 {
   border-radius: 50%;
   border: 2px solid white;
-  cursor: pointer;
-  transition: transform 0.2s;
 }
 
 #Logo:hover
 {
-  transform: scale(1.1);
   opacity: 90%;
 }
 
@@ -125,4 +133,90 @@ input[type = text], input[type = password]
     margin-top: 10%;
     margin-bottom: 10%;
   }
+}
+
+/* Pop up Personality Form */
+
+#overlay 
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  filter:alpha(opacity=70);
+  -moz-opacity:0.7;
+  -khtml-opacity: 0.7;
+  opacity: 0.6;
+  z-index: 100;
+  display: none;
+}
+
+.PopUpCard a
+{
+  text-decoration: none;
+}
+
+.popup
+{
+  width: 100%;
+  margin: 0 auto;
+  display: none;
+  position: fixed;
+  z-index: 101;
+}
+  
+.PopUpCard
+{
+  margin-top: 10%;
+  margin-left: 20%;
+  width: 60%;
+  background: rgb(185, 185, 185);
+  position: relative;
+  z-index: 103;
+  padding: 15px 35px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px #000;
+  padding-bottom: 5%;
+}
+
+@media screen and (max-width: 800px) 
+{
+  .PopUpCard
+  {
+    padding-bottom: 10%;
+  }
+}
+  
+.PopUpCard p
+{
+  clear: both;
+  font-size: 20px;
+}
+
+.close
+{
+  opacity: 100%;
+}
+
+.close:hover
+{
+  opacity: 100%;
+}
+
+/* Top Navigation Bar */
+.TopNavigationBar
+{
+  overflow: hidden;
+  background-color: rgb(185, 185, 185);
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+#NavigationBarIcon
+{
+  border-radius: 50%;
+  padding: 0.5%;
 }
