--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -81,6 +81,11 @@ img:hover
   transform: scale(1.1);
 }
 
+h1, h2, h3, h4, h5, h6
+{
+  color: rgb(185, 185, 185);
+}
+
 /* Login form */
 
 .LoginCard
@@ -169,9 +174,9 @@ input[type = text], input[type = password]
   
 .PopUpCard
 {
-  margin-top: 10%;
-  margin-left: 20%;
-  width: 60%;
+  margin-top: 7.5%;
+  margin-left: 10%;
+  width: 80%;
   background: rgb(185, 185, 185);
   position: relative;
   z-index: 103;
@@ -185,6 +190,7 @@ input[type = text], input[type = password]
 {
   .PopUpCard
   {
+    margin-top: 0%;
     padding-bottom: 10%;
   }
 }
@@ -206,6 +212,7 @@ input[type = text], input[type = password]
 }
 
 /* Top Navigation Bar */
+
 .TopNavigationBar
 {
   overflow: hidden;
@@ -219,4 +226,44 @@ input[type = text], input[type = password]
 {
   border-radius: 50%;
   padding: 0.5%;
+}
+
+/* Personality Form */
+
+.PersonalityForm
+{
+  margin-top: 10%;
+  margin-left: 15%;
+  width: 70%;
+  text-align: center;
+}
+
+@media screen and (max-width: 800px) 
+{
+  .PersonalityForm
+  {
+    margin-top: 25%;
+  }
+}
+
+#PersonalityInput
+{
+  width: 80%;
+  padding: 12px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* 404 page */
+.fof
+{
+  margin-top: 20%;
+  text-align: center;
+}
+
+#fofBack
+{
+  margin-top: 10%;
+  margin-left: 35%;
 }
