--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -408,3 +408,88 @@ input[type = text], input[type = password]
     margin-left: 25%;
   }
 }
+
+/* Loading Page */
+.loader 
+{
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  margin-left: -60px;
+  border: 16px solid rgb(185, 185, 185);
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+#QuitMatchingButton
+{
+  text-align: center;
+  width: 30%;
+  margin-top: 40%;
+  margin-left: 35%;
+}
+
+@media screen and (max-width: 1000px) 
+{
+  #QuitMatchingButton
+  {
+    width: 50%;
+    margin-top: 60%;
+    margin-left: 25%;
+  }
+}
+
+
+@media screen and (max-width: 700px) 
+{
+  #QuitMatchingButton
+  {
+    width: 50%;
+    margin-top: 70%;
+    margin-left: 25%;
+  }
+}
+
+@media screen and (max-width: 550px) 
+{
+  #QuitMatchingButton
+  {
+    width: 50%;
+    margin-top: 90%;
+    margin-left: 25%;
+  }
+}
+
+@media screen and (max-width: 400px) 
+{
+  #QuitMatchingButton
+  {
+    width: 50%;
+    margin-top: 110%;
+    margin-left: 25%;
+  }
+}
+
+@media screen and (max-width: 300px) 
+{
+  #QuitMatchingButton
+  {
+    width: 50%;
+    margin-top: 140%;
+    margin-left: 25%;
+  }
+}
+
+#MatchingTitle
+{
+  margin-top: 5%;
+  text-align: center;  
+}
