--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -220,6 +220,7 @@ input[type = text], input[type = password]
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 99;
 }
 
 #NavigationBarIcon
@@ -385,7 +386,7 @@ input[type = text], input[type = password]
   font-size: 22px;
 }
 
-.ProfileButton:hover, .ProfileImage:hover
+.ProfileButton:hover, .ProfileImage:hover, .ProfileImageTwo:hover
 {
   opacity: 0.7;
   transform: scale(1);
@@ -492,4 +493,49 @@ input[type = text], input[type = password]
 {
   margin-top: 5%;
   text-align: center;  
+}
+
+/* Match found */
+
+.ProfileCardFound
+{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  text-align: center;
+  margin-top: 9%;
+  padding-bottom: 1%;
+}
+
+@media screen and (max-width: 1100px) 
+{
+  .ProfileCardFound
+  {
+    margin-top: 12.5%;
+  }
+}
+
+@media screen and (max-width: 900px) 
+{
+  .ProfileCardFound
+  {
+    margin-top: 15%;
+  }
+}
+
+@media screen and (max-width: 600px) 
+{
+  .ProfileCardFound
+  {
+    margin-top: 22.5%;
+  }
+}
+
+.Nume
+{
+  margin-top: 5%;
+}
+
+#Scor
+{
+  text-align: center;
 }
